@@ -1,76 +1,94 @@
 package database;
-
 import org.ektorp.CouchDbConnector;
+import org.ektorp.CouchDbInstance;
 import org.ektorp.ViewQuery;
 import org.ektorp.ViewResult;
+import org.ektorp.http.HttpClient;
+import org.ektorp.http.StdHttpClient;
+import org.ektorp.impl.StdCouchDbConnector;
+import org.ektorp.impl.StdCouchDbInstance;
 
-import java.util.*;
+import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
-public class CouchDBHandler {
+public class CouchDBHandler implements AutoCloseable {
 
+    private final String dbName;
+    private final HttpClient httpClient;
+    private final CouchDbInstance dbInstance;
     private final CouchDbConnector db;
 
-    public CouchDBHandler(CouchDbConnector db) {
-        this.db = db;
+    /**
+     * Constructor for CouchDBHandler.
+     *
+     * @param dbUrl    the URL of the CouchDB server (e.g., "http://localhost:5984")
+     * @param dbName   the name of the database to connect to
+     * @param username CouchDB username (if authentication is enabled)
+     * @param password CouchDB password (if authentication is enabled)
+     */
+    public CouchDBHandler(String dbUrl, String dbName, String username, String password) {
+        this.dbName = dbName;
+
+        // Build the HttpClient
+        this.httpClient = new StdHttpClient.Builder()
+                .url(dbUrl)
+                .username(username)
+                .password(password)
+                .build();
+
+        // Create the DB instance and connector
+        this.dbInstance = new StdCouchDbInstance(httpClient);
+        this.db = new StdCouchDbConnector(dbName, dbInstance);
+
+        // Create database if it does not exist
+        db.createDatabaseIfNotExists();
     }
 
     /**
-     * Fetches all news from CouchDB and removes duplicates.
+     * Fetches all documents in the CouchDB database as a List of Maps.
+     *
+     * @return a list of documents (each document is a Map<String, Object>),
+     *         or an empty list if an error occurs.
      */
-    public List<Map<String, Object>> fetchAndCleanNews() {
+    public List<Map<String, Object>> fetchAllDocuments() {
         try {
-            // Fetch all documents from CouchDB
-            ViewQuery query = new ViewQuery().allDocs().includeDocs(true);
+            // Query all documents with their full contents
+            ViewQuery query = new ViewQuery()
+                    .allDocs()
+                    .includeDocs(true);
+
             ViewResult result = db.queryView(query);
 
-            // Extract documents into a list
-            List<Map<String, Object>> allNews = result.getRows().stream()
-                    .map(row -> row.getDocumentAs(Map.class))
-                    .collect(Collectors.toList());
-
-            System.out.println("Fetched " + allNews.size() + " news articles from CouchDB.");
-
-            // Remove duplicates based on unique URLs
-            Set<String> uniqueUrls = new HashSet<>();
-            List<Map<String, Object>> cleanedNews = new ArrayList<>();
-
-            for (Map<String, Object> news : allNews) {
-                String url = (String) news.get("url"); // Assumes "url" is the unique identifier
-                if (url != null && uniqueUrls.add(url)) {
-                    cleanedNews.add(news);
-                }
-            }
-
-            System.out.println("Cleaned news size after removing duplicates: " + cleanedNews.size());
-            return cleanedNews;
-
+            // Extract the full documents instead of the 'value' field
+            return result.getRows()
+                         .stream()
+                         .map(row -> row.getDocAs(Map.class))
+                         .collect(Collectors.toList());
         } catch (Exception e) {
-            System.err.println("Error fetching and cleaning news: " + e.getMessage());
             e.printStackTrace();
-            return Collections.emptyList();
+            return List.of();
         }
     }
 
     /**
-     * Saves cleaned news back to CouchDB.
+     * Deletes the database from CouchDB. Use with caution.
      */
-    public void saveCleanedNews(List<Map<String, Object>> cleanedNews) {
+    public void deleteDatabase() {
         try {
-            System.out.println("Saving cleaned news to CouchDB...");
-
-            // Clear the database before saving new data
-            db.deleteDatabase();
-            db.createDatabaseIfNotExists();
-
-            for (Map<String, Object> news : cleanedNews) {
-                db.create(news);
-            }
-
-            System.out.println("Cleaned news saved successfully to CouchDB.");
+            dbInstance.deleteDatabase(this.dbName);
         } catch (Exception e) {
-            System.err.println("Error saving cleaned news to CouchDB: " + e.getMessage());
             e.printStackTrace();
+        }
+    }
+
+    /**
+     * Closes the underlying HttpClient. (Called automatically if used in a try-with-resources block.)
+     */
+    @Override
+    public void close() {
+        if (httpClient != null) {
+            httpClient.shutdown();
         }
     }
 }
